# mahjong-score

./: CMakeLists.txt  README.md
src/: player_core.hpp  player_impl.cpp  player_impl.hpp
